styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
    display: grid;
}

header {
    background: rgb(55, 126, 207);
}

.title span {
    display: block;
}

header div {
    font-size: 25px;
    text-align: center;
    padding: 20px 20px 25px 20px;
    color: white;
}

nav {
    background: rgb(37, 37, 37);
    margin: 0 auto;
}

nav ul {
    display: flex;
    list-style: none;
}

nav li {
    flex: 1 0 auto;
}

nav a {
    display: block;
    color: white;
    text-align: center;
    padding: 1rem;
    text-decoration: none;
}

nav a:hover {
    text-decoration: overline;
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    padding: 50px;
    max-width: 1200px;
    margin: 0 auto;
}

h1 {
    grid-column: 1 / 3;
    text-align: center;
}

.row {
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 20px;
    align-items: center;
}

h3 {
    width: 75%;
    margin: 20px auto;
    text-align: center;
    border-bottom: 2px solid darkgrey;
    padding-bottom: 5px;
}

.card h2 {
    background: rgb(55, 126, 207);
    color: white;
    padding: 12px;
    margin: -15px -15px 15px -15px;
    text-align: center;
    border-radius: 10px 10px 0 0;
}

figure {
    text-align: center;
}

figcaption {
    margin-top: 8px;
    font-size: 14px;
    font-style: italic;
}

.card {
    border: 1px solid rgb(55, 126, 207);
    padding: 15px;
    border-radius: 10px;
}

.resources {
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 15px;
}

footer {
    background-color: rgb(55, 126, 207);
    color: white;
    font-size: 16px;
    text-align: center;
    padding: 15px;
}

#lastModified {
    color: gold;
    font-weight: bold;
}

